# Istara

./: .env.example  .gitignore  AGENT.md  AGENT_ENTRYPOINT.md  CHANGELOG.md  CHANGE_CHECKLIST.md  CLAUDE.md  COMPLETE_SYSTEM.md  CONTRIBUTING.md  Caddyfile  GEMINI.md  INTEGRITY_INDEX.md  INVESTIGATION_SUMMARY.md  ISTARA_VS_PI_COMPARISON.md  LICENSE  P0-1-2-3.rtf  P0-1-2-3.txt  QWEN.md  README.md  README.pt-BR.md  REVIEW_PHASE_ZETA_INTEGRATION.md  STATE_CHECKPOINT.md  SYSTEM_CHANGE_MATRIX.md  SYSTEM_INTEGRITY_GUIDE.md  SYSTEM_PROMPT.md  TESTING.md  Tech.md  VERSION  _CHANGE_LOG.md  _SECURITY_AUDIT_REPORT.md  current_plans.md  datasest-json-generator.py  docker-compose.yml  istara.sh  last_work.md  old_plans.md  opencode-qwen36plus-compass.md  planner.md  reclaw.sh  session-ses_26e0.md  (+2 more)
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_distributed_platform.py  003_add_mfa_columns.py
backend/app/: __init__.py  config.py  main.py
backend/app/agents/: __init__.py  custom_worker.py  devops_agent.py  orchestrator.py  self_doc.py  ui_audit_agent.py  user_sim_agent.py  ux_eval_agent.py
backend/app/api/: websocket.py
backend/app/api/middleware/: auth.py
backend/app/api/routes/: agents.py  audit.py  auth.py  autoresearch.py  backup.py  channels.py  chat.py  chat_voice.py  code_applications.py  codebook_versions.py  compute.py  connections.py  deployments.py  documents.py  files.py  findings.py  interfaces.py  laws.py  llm_servers.py  loops.py  mcp.py  meta_hyperagent.py  metrics.py  notifications.py  presentation.py  projects.py  reports.py  scheduler.py  sessions.py  settings.py  skills.py  steering.py  surveys.py  (+4 more)
backend/app/channels/: base.py  google_chat.py  slack.py  telegram.py  whatsapp.py
backend/app/core/: adaptive_validation.py  agent.py  agent_factory.py  agent_hooks.py  agent_identity.py  agent_learning.py  agent_memory.py  agent_memory_hook.py  audit_middleware.py  auth.py  autoresearch_engine.py  autoresearch_isolation.py  autoresearch_rate_limiter.py  backup_manager.py  budget_coordinator.py  channel_resilience.py  checkpoint.py  compute_pool.py  compute_registry.py  connection_string.py  consensus.py  content_guard.py  context_hierarchy.py  context_policy.py  context_summarizer.py  data_integrity.py  data_migration.py  datetime_utils.py  embeddings.py  field_encryption.py  file_processor.py  file_watcher.py  hardware.py  llm_router.py  lmstudio.py  meta_hyperagent.py  model_capabilities.py  network_discovery.py  network_security.py  ollama.py  (+23 more)
backend/app/knowledge/: __init__.py  featured_mcp_servers.json  laws_of_ux.json
backend/app/mcp/: __init__.py  server.py
backend/app/models/: __init__.py  agent.py  agent_loop_config.py  autoresearch_experiment.py  backup.py  channel_conversation.py  channel_instance.py  channel_message.py  code_application.py  codebook_version.py  connection_string.py  database.py  design_screen.py  document.py  finding.py  llm_server.py  loop_execution.py  mcp_access_policy.py  mcp_audit_log.py  mcp_server_config.py  message.py  method_metric.py  model_skill_stats.py  notification.py  project.py  project_member.py  project_report.py  research_deployment.py  session.py  survey_integration.py  task.py  telemetry_span.py  user.py  webauthn_credential.py
backend/app/services/: a2a.py  adaptive_interview.py  agent_loop_service.py  agent_service.py  browser_service.py  channel_service.py  deployment_service.py  figma_service.py  heartbeat.py  inbound_processor.py  laws_of_ux_service.py  loop_execution_service.py  mcp_client_manager.py  mcp_security.py  notification_service.py  stitch_service.py  survey_ingestion.py
backend/app/skills/: __init__.py  all_skills.py  base.py  browser_skills.py  design_tools.py  evaluation_skill.py  export_definitions.py  generate_definitions.py  intercoder.py  registry.py  simulation_skill.py  skill_factory.py  skill_manager.py  system_actions.py
backend/scripts/: migrate_email_encryption.py
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: backend_setup.rs  commands.rs  config.rs  first_run.rs  health.rs  installer.rs  main.rs  path_resolver.rs  process.rs  stats.rs  tray.rs
(+707 files in other folders)
