[project]
name = "istara-backend"
version = "2026.04.04.4"
description = "Istara — Local-first AI agent for UX Research"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    # Core
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.20.0",
    "alembic>=1.14.0",
    "httpx>=0.28.0",
    "pydantic-settings>=2.7.0",
    "python-multipart>=0.0.18",
    "websockets>=13.0",
    "aiofiles>=24.1.0",
    # Data & ML
    "lancedb>=0.17.0",
    "pyarrow>=18.0.0",
    "pandas>=2.2.0",
    # Document processing
    "pypdf>=5.0.0",
    "python-docx>=1.1.0",
    "python-magic>=0.4.27",
    "pyyaml>=6.0.0",
    "html2text>=2024.2.26",
    # System monitoring
    "psutil>=6.0.0",
    "watchfiles>=1.0.0",
    # Database (PostgreSQL for team mode)
    "asyncpg>=0.30.0",
    # Security
    "cryptography>=43.0.0",
    "slowapi>=0.1.9",
    # Messaging channels
    "python-telegram-bot>=22.0",
    "slack-bolt[async]>=1.20.0",
    # MCP (Model Context Protocol)
    "fastmcp>=2.0.0",
]

[project.optional-dependencies]
browser = [
    "browser-use>=0.3.0",
    "langchain-openai>=0.3.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["alembic*", "tests*", "data*"]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = ["alembic/"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
