[package]
name = "istara-desktop"
version = "26.128.0"
description = "Istara Desktop — System tray app for managing Istara server and relay"
authors = ["Istara Team"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
sysinfo = "0.31"
tokio = { version = "1", features = ["full"] }
dirs = "5"
open = "5"
version-compare = "0.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
